Added Admin Privileges
Org Admins now have access to all events and can make changes if necessary. Admins are able to see all private events in an org and run searches on all events.
