# lib/controllers/routes/stats.js
@@ -34,7 +34,10 @@ router.get('/me', function(req, res){
  * Full path : /purecloud/login
  **/
 router.get('/event', function(req, res){
-  statsService.getEventStats(req.query.eventID).then(function(result){
+  statsService.getEventStats({
+    'user' : req.user,
+    'eventID' : req.query.eventID
+  }).then(function(result){
     res.send(result);
   }).catch(function(error){
     res.status(400).send(error);
